--- a/css/src/bones.scss
+++ b/css/src/bones.scss
@@ -68,6 +68,7 @@ html[xmlns] .clearfix {
         &:hover {
           text-decoration: none;
           color: $contrast;
+          background: $primary;
         }
       }
       &:hover > .dropdown {
